unpackaged/main/default/objects/PortalDeliverablesAndTilesDateMapping__mdt/PortalDeliverablesAndTilesDateMapping__mdt.object-meta.xml
<CustomObject>
    <label>PortalDeliverablesAndTilesDateMapping</label>
    <pluralLabel>PortalDeliverablesAndTilesDateMapping</pluralLabel>
</CustomObject>