unpackaged/main/default/objects/PortalDeliverablesAndTilesDateMapping__mdt/fields/Deliverable_Tracker_Tile__c.field-meta.xml
<CustomField>
    <fullName>Deliverable_Tracker_Tile__c</fullName>
    <description>Points to the Deliverables Tracker Tile that contains date for the Portal Deliverable section</description>
    <inlineHelpText>Points to the Deliverables Tracker Tile that contains date for the Portal Deliverable section</inlineHelpText>
    <label>Deliverable Tracker Tile</label>
    <referenceTo>ItemsforEDF__mdt</referenceTo>
    <relationshipLabel>PortalDeliverablesAndTilesDateMapping</relationshipLabel>
    <relationshipName>PortalDeliverablesAndTilesDateMapping</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>