unpackaged/main/default/objects/PortalDeliverablesAndTilesDateMapping__mdt/fields/Portal_Deliverables_Field__c.field-meta.xml
<CustomField>
    <fullName>Portal_Deliverables_Field__c</fullName>
    <description>Identifies the place on Portal Deliverables section where the date would be displayed</description>
    <inlineHelpText>Identifies the place on Portal Deliverables section where the date would be displayed</inlineHelpText>
    <label>Portal Deliverables Field</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Certify_Training_Session_Attended</fullName>
                <default>true</default>
                <label>Certify_Training_Session_Attended</label>
            </value>
            <value>
                <fullName>Complete_Post_Training_Survey</fullName>
            </value>
            <value>
                <fullName>Complete_Pre_Work</fullName>
            </value>
            <value>
                <fullName>Final_Deliverables_Instructions</fullName>
            </value>
            <value>
                <fullName>Pre_Training_Survey</fullName>
            </value>
            <value>
                <fullName>Training_Info_Sheet</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>